--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,13 @@ h5 {
   margin: 1rem 0;
 }
 
+pre {
+  font-size: 1em;
+  font-family: monospace;
+  font-weight: 400;
+  font-style: normal;  
+}
+
 #app {
   align-items: center;
   display: flex;
@@ -151,14 +158,15 @@ h5 {
 }
 
 button {
+  background-color: rgb(54, 60, 62);
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  cursor: pointer;
+  font-family: inherit;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
-  background-color: rgb(54, 60, 62);
-  cursor: pointer;
+  padding: 0.6em 1.2em;
+  touch-action: manipulation; /* to prevent double-tap-to-zoom */
   transition: border-color 0.25s;
 }
 button:hover {
