--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,132 @@
+/* Define Font-Faces */
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 200;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-ExtraLight.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-ExtraLight.otf.woff') format('woff');
+}
+
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 200;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-ExtraLightIt.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-ExtraLightIt.otf.woff') format('woff');
+}
+
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 300;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-Light.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-Light.otf.woff') format('woff');
+}
+
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 300;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-LightIt.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-LightIt.otf.woff') format('woff');
+}
+
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 400;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-Regular.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-Regular.otf.woff') format('woff');
+}
+
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 400;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-It.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-It.otf.woff') format('woff');
+}
+
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-Medium.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-Medium.otf.woff') format('woff');
+}
+
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 500;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-MediumIt.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-MediumIt.otf.woff') format('woff');
+}
+
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-Semibold.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-Semibold.otf.woff') format('woff');
+}
+
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 600;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-SemiboldIt.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-SemiboldIt.otf.woff') format('woff');
+}
+
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 700;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-Bold.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-Bold.otf.woff') format('woff');
+}
+
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 700;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-BoldIt.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-BoldIt.otf.woff') format('woff');
+}
+
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 900;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-Black.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-Black.otf.woff') format('woff');
+}
+
+@font-face{
+    font-family: 'Source Code Pro';
+    font-weight: 900;
+    font-style: italic;
+    font-stretch: normal;
+    src: url('/fonts/SourceCodePro-BlackIt.ttf.woff2') format('woff2'),
+         url('/fonts/SourceCodePro-BlackIt.otf.woff') format('woff');
+}
+
+
+/* Define Styles */
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -134,7 +263,10 @@ pre {
 }
 
 #mazeOutput {
-    margin: 0;
+  font-family: ui-monospace, "Source Code Pro", monospace;
+  font-optical-sizing: auto;
+  font-style: normal;
+  margin: 0;
 }
 
 .logo {
